Contributes to fixing the short off-canvas problem without breaking scrolling.  Previous commit broke vertical content scrolling when adding height: 100% to off-canvas-wrap.  This fixes the problem by only applying height: 100% when either the left or right off-canvas menu's are open.  Works like a charm.

--- a/scss/foundation/components/_offcanvas.scss
+++ b/scss/foundation/components/_offcanvas.scss
@@ -74,7 +74,6 @@ $menu-slide: "transform 500ms ease" !default;
 @mixin wrap-base {
   position: relative;
   width: 100%;
-  height: 100%;
 }
 
 // basic styles for off-canvas menu container
@@ -102,24 +101,26 @@ $menu-slide: "transform 500ms ease" !default;
 // OFF CANVAS WRAP
 // Wrap visible content and prevent scroll bars
 @mixin off-canvas-wrap {
-    @include kill-flicker;
-    @include wrap-base;
-    overflow: hidden;
+  @include kill-flicker;
+  @include wrap-base;
+  overflow: hidden;
+
+  &.move-right,
+  &.move-left { height: 100%; }
 }
 
 // INNER WRAP
 // Main content area that moves to reveal the off-canvas nav
 @mixin inner-wrap {
-    @include kill-flicker;
-    @include wrap-base;
-    @include clearfix;
+  @include kill-flicker;
+  @include wrap-base;
+  @include clearfix;
 
-    -webkit-transition: -webkit-#{$menu-slide};
-    -moz-transition: -moz-#{$menu-slide};
-    -ms-transition: -ms-#{$menu-slide};
-    -o-transition: -o-#{$menu-slide};
-    transition: #{$menu-slide};
-
+  -webkit-transition: -webkit-#{$menu-slide};
+  -moz-transition: -moz-#{$menu-slide};
+  -ms-transition: -ms-#{$menu-slide};
+  -o-transition: -o-#{$menu-slide};
+  transition: #{$menu-slide};
 }
 
 // TAB BAR
